Thu Oct 13 10:37:31 2016  Eric Wong  <e@80x24.org>

	* doc/extension.rdoc: wording fix

Thu Oct 13 00:39:08 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* test/ruby/test_array.rb (test_sort_bang_with_freeze): make a
	  clone to copy a <=> singleton method, instead of dup.  which
	  element will be called is not predictable.
	  [ruby-core:76088] [Bug #12509]

Thu Oct 13 00:21:27 2016  Simon Soriano  <simon0191@gmail.com>

	* doc/extension.rdoc: Replace "You can defined hooked variables"
	  with "You can define hooked variables". [Fix GH-1460]

Wed Oct 12 21:05:50 2016  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ruby.c (open_load_file): revert r56385.  it introduced incompatibility
	  about `DATA.binmode?`.

Wed Oct 12 15:24:53 2016  SHIBATA Hiroshi  <hsbt@ruby-lang.org>

	* tool/downloader.rb: Removed verification of gem certification.
	  Because signed gem is not working on rubygems ecosystem.
	* tool/gem-unpack.rb: ditto.

Tue Oct 11 22:08:24 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (prep_io): fix typo of struct member name.
	  [ruby-core:77550] [Bug #12829]

Tue Oct 11 16:45:24 2016  Tanaka Akira  <akr@fsij.org>

	* lib/uri/generic.rb (URI.find_proxy): Add an optional argument, env.

Tue Oct 11 16:38:32 2016  Tanaka Akira  <akr@fsij.org>

	* lib/pp.rb (String#pretty_print): Defined to print a string as
	  multiple lines.
	  [ruby-core:76800] [Feature#12664] proposed by Petr Chalupa.

Mon Oct 10 15:22:27 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (open_load_file): bind the open fd to an IO instance
	  before waiting FIFO, not to leak the fd if interrupted.

Mon Oct 10 12:40:54 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ruby.c (open_load_file): compare with EXEEXT instead of hard
	  coded name, and do not match with mere EXEEXT.

	* ruby.c (open_load_file): open in binary mode if available, as
	  parser deals with EOLs.

	* io.c (prep_io): reduce isatty call (and its system call) on
	  Cygwin.
